--- a/.gitignore
+++ b/.gitignore
@@ -110,7 +110,7 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
-# yarn v2
+# yarn v2.
 .yarn/cache
 .yarn/unplugged
 .yarn/build-state.yml
